--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   bloc: ^8.0.3
   flutter_bloc: ^8.0.1
   dio: ^4.0.6
+  shared_preferences: ^2.0.13
+  webview_flutter_x5: ^2.0.8+9
+
   conditional_builder_null_safety: ^0.0.6
 
   # The following adds the Cupertino Icons font to your application.
